--- a/style.css
+++ b/style.css
@@ -28,3 +28,29 @@ header {
   z-index: 1000;
   box-shadow: 0 0.5rem 1rem rgb(0, 0, 0, 0.1);
 }
+
+header .logo {
+  font-size: 3rem;
+  color: #333;
+  font-weight: bolder;
+}
+
+header .logo span {
+  color: var(--pink);
+}
+
+header .navbar a {
+  font-size: 2rem;
+  padding: 0 1.5rem;
+  color: #666;
+}
+
+header .navbar a:hover {
+  color: var(--pink);
+}
+
+header .icons a {
+  font-size: 2.5rem;
+  color: #333;
+  margin-left: 1.5rem;
+}
