--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ html {
   scroll-padding-top: 6rem;
   overflow-x: hidden;
 }
+
 header {
   position: fixed;
   top: 0;
@@ -23,34 +24,73 @@ header {
   right: 0;
   background: white;
   padding: 2rem 9%;
+  display: flex;
   align-items: center;
   justify-content: space-between;
   z-index: 1000;
-  box-shadow: 0 0.5rem 1rem rgb(0, 0, 0, 0.1);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
 }
 
 header .logo {
   font-size: 3rem;
   color: #333;
   font-weight: bolder;
+  text-decoration: none;
 }
 
 header .logo span {
-  color: var(--pink);
+  color: #ff3b5c;
+}
+
+/* Navbar */
+header .navbar {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+header .navbar li {
+  margin: 0 15px;
 }
 
 header .navbar a {
   font-size: 2rem;
   padding: 0 1.5rem;
   color: #666;
+  text-decoration: none;
 }
 
 header .navbar a:hover {
-  color: var(--pink);
+  color: #ff3b5c;
+}
+
+header .icons {
+  display: flex;
+  align-items: center;
 }
 
 header .icons a {
   font-size: 2.5rem;
   color: #333;
   margin-left: 1.5rem;
+  text-decoration: none;
+}
+
+header .icons a:hover {
+  color: #ff3b5c;
+}
+
+header #toggler {
+  display: none;
+}
+
+header .fa-bars {
+  font-size: 3rem;
+  color: #333;
+  border-radius: 0.5rem;
+  padding: 1rem 1.5rem;
+  cursor: pointer;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  display: none;
 }
