--- a/style.css
+++ b/style.css
@@ -42,7 +42,6 @@ header .logo span {
   color: #ff3b5c;
 }
 
-/* Navbar */
 header .navbar {
   display: flex;
   list-style: none;
@@ -93,4 +92,35 @@ header .fa-bars {
   cursor: pointer;
   border: 1px solid rgba(0, 0, 0, 0.3);
   display: none;
+}
+
+@media (max-width: 991px) {
+  html {
+    font-size: 55%;
+  }
+  header {
+    padding: 2rem;
+  }
+}
+
+@media (max-width: 768px) {
+  header .fa-bars {
+    display: block;
+  }
+  header .navbar {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    background: white;
+    border-top: 0.1rem solid rgba(0, 0, 0, 0.1);
+  }
+
+  header .navbar a {
+    margin: 1.5rem;
+    padding: 1.5rem;
+    background: white;
+    border: 0.1rem solid rgba(0, 0, 0, 0.1);
+    display: block;
+  }
 }
