Improve responsive navigation bar

--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-body {
+:root {
+  --pink: #e84393;
+}
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -35,33 +39,20 @@ header .logo {
   font-size: 3rem;
   color: #333;
   font-weight: bolder;
-  text-decoration: none;
 }
 
 header .logo span {
-  color: #ff3b5c;
-}
-
-header .navbar {
-  display: flex;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-header .navbar li {
-  margin: 0 15px;
+  color: var(--pink);
 }
 
 header .navbar a {
   font-size: 2rem;
   padding: 0 1.5rem;
   color: #666;
-  text-decoration: none;
 }
 
 header .navbar a:hover {
-  color: #ff3b5c;
+  color: var(--pink);
 }
 
 header .icons {
@@ -77,7 +68,7 @@ header .icons a {
 }
 
 header .icons a:hover {
-  color: #ff3b5c;
+  color: var(--pink);
 }
 
 header #toggler {
@@ -114,6 +105,13 @@ header .fa-bars {
     right: 0;
     background: white;
     border-top: 0.1rem solid rgba(0, 0, 0, 0.1);
+    display: none;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  header #toggler:checked ~ .navbar {
+    display: flex;
   }
 
   header .navbar a {
@@ -122,5 +120,11 @@ header .fa-bars {
     background: white;
     border: 0.1rem solid rgba(0, 0, 0, 0.1);
     display: block;
+  }
+}
+
+@media (max-width: 450px) {
+  html {
+    font-size: 50%;
   }
 }
