--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@
   outline: none;
   border: none;
   text-decoration: none;
-  text-transform: capitalize;
   transition: 0.2s linear;
 }
 
@@ -23,6 +22,20 @@ html {
 
 section {
   padding: 2 rem 9%;
+}
+
+.heading {
+  text-align: center;
+  font-size: 4rem;
+  color: black;
+  padding: 1rem;
+  margin: 2rem 0;
+  background: rgba(225, 51, 153, 0.05);
+}
+
+.heading span{
+  color: var(--pink);
+  
 }
 
 .btn {
